# xlambein.github.io

./: CNAME  Cargo.toml  Gemfile  _config.yml  arborium.nix  atom.xml  blog.html  chart.js  flake.nix  highlight.lua  index.html  index.md  script.js  site.nix  style.css  svd.html
.well-known/: webfinger
1pswvn3d6601dhy802sb47hs9ahy44z3-phrase-generator/: main.js
_data/: navigation.yml
_includes/: navigation.html
_layouts/: default.html  post.html  post_header.html
about/: index.html
assets/css/: code.css  style.css  style.scss
assets/js/: mastodon-comments.js
blog/_posts/: 2018-10-31-soma-the-machine.md  2018-10-31-the-machine-a-conversation.md  2018-11-11-sci-zine-exoplanets-transit.md  2018-12-05-ludum-dare-43-sacrifice.md  (+3 more)
books/: index.html
collage-compositor/: index.html
gui-polymorphic-pattern/: index.html
home-server-wol/: index.html
http-serialized-closures/: index.html
inktober2019/: index.html
jampack/: default.nix  package-lock.json  update.sh
keyboard/: index.html
ldjam43/: index.html
ldjam44/: index.html
ldjam48/: index.html
ldjam49/: index.html
music/: index.html
pages/: atom.xml.nix  index.md  index.md.nxt
paw-live2023/: demo01.webm  demo04.webm  demo05.webm  demo06.webm  index.html
phrase-generator/: index.html  main.js  style.css
poems/: index.html
recipes/: index.html
rust-against-humanity/: index.html
sci-zines/: index.html
soma-the-machine/: index.html
src/: main.rs
syntax-todo/: index.html  todo.js
templates/: base.html  base.html.nix  page.html  page.html.nix  recipe.html.nix
(+135 files in other folders)
