[package]
name = "lambein-xyz"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.10.1"
handlebars = { version = "4.1.0", features = ["dir_source"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.17"
